# deadpool

./: .clang-format  .gdbinit  .gitignore  .gitmodules  CMakeLists.txt  Justfile  clz_test.c  environment.yml  pixi.toml
arch/: Dockerfile.arm  arm-toolchain.cmake
bench/: CMakeLists.txt  allocator_benchmark.cpp  allocator_policies.h  internal_benchmark.cpp
cmake/: generate_config.cmake  generate_config.py
include/: allocator.h  config.h  config_macros.h  log.h
scripts/: generate_config.py
src/: allocator.c
test/: CMakeLists.txt  FuzzedDataProvider.hpp  allocator_fuzz.cpp  allocator_test.cpp  basic_test.cpp  edge_case_test.cpp  functionality_test.cpp  fuzz_test.cpp  stress_test.cpp  test_common.hpp
